Correcting Swagger.
